; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_delegation.c_nfs_remove_bad_delegation.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_delegation.c_nfs_remove_bad_delegation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.nfs_delegation = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs_remove_bad_delegation(%struct.inode* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  %3 = alloca %struct.nfs_delegation*, align 8
  store %struct.inode* %0, %struct.inode** %2, align 8
  %4 = load %struct.inode*, %struct.inode** %2, align 8
  %5 = call %struct.nfs_delegation* @nfs_inode_detach_delegation(%struct.inode* %4)
  store %struct.nfs_delegation* %5, %struct.nfs_delegation** %3, align 8
  %6 = load %struct.nfs_delegation*, %struct.nfs_delegation** %3, align 8
  %7 = icmp ne %struct.nfs_delegation* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.inode*, %struct.inode** %2, align 8
  %10 = load %struct.nfs_delegation*, %struct.nfs_delegation** %3, align 8
  %11 = getelementptr inbounds %struct.nfs_delegation, %struct.nfs_delegation* %10, i32 0, i32 0
  %12 = call i32 @nfs_inode_find_state_and_recover(%struct.inode* %9, i32* %11)
  %13 = load %struct.nfs_delegation*, %struct.nfs_delegation** %3, align 8
  %14 = call i32 @nfs_free_delegation(%struct.nfs_delegation* %13)
  br label %15

15:                                               ; preds = %8, %1
  ret void
}

declare dso_local %struct.nfs_delegation* @nfs_inode_detach_delegation(%struct.inode*) #1

declare dso_local i32 @nfs_inode_find_state_and_recover(%struct.inode*, i32*) #1

declare dso_local i32 @nfs_free_delegation(%struct.nfs_delegation*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
